--- a/body_scale.html
+++ b/body_scale.html
@@ -9,6 +9,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
+
+
+    <!--include css & js from bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/dropdowns/">
+
+    <link rel="stylesheet" type="text/css" href="css/dropdowns.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css.map">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+
+    <!--google chart-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
     <title>Body scale</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
@@ -41,77 +63,105 @@
             display: inline;
             margin: 0px 10px;
         }
-
-        .table {
-            display: flex;
-            justify-content: center;
-        }
-
-        table,
-        td {
-            border: 1px solid #333;
-        }
-
-        thead,
-        tfoot {
-            background-color: #333;
-            color: #fff;
-        }
-
-        table,
-        td,
-        th {
-            padding: 4px;
-        }
     </style>
 </head>
 
 <body>
     <br>
-    <img
-        src="https://play-lh.googleusercontent.com/keE2gN0Hqh8-Tsf_RYZ_-yS2uo6ToqYVyRBv_UZaLXsgeeHBd2YPcEUWEF4DEtfGyb1h">
-    <h2>body scale</h2>
-    <form name="create">
-        <input id="target" type="text" name="target" value="5" hidden>
-        <input class="username" name="username" value="" hidden>
-        <input type="date" name="date" value="">
-        <input type="number" name="height" placeholder="height">
-        <input type="number" name="weight" placeholder="weight">
-
-        <input type="submit" value="create">
-    </form>
-    <br>
-    <form name="read">
-        <input id="target" type="text" name="target" value="5" hidden>
-        <input class="username" name="username" value="" hidden>
-        <input type="date" name="date" value="">
-        <input type="number" name="height" placeholder="height">
-        <input type="number" name="weight" placeholder="weight">
-
-        <input type="submit" value="read">
-    </form>
-    <form name="delete">
-        <input id="target" type="text" name="target" value="5" hidden>
-        <input class="username" name="username" value="" hidden>
-        <input type="date" name="date" value="">
-        <input type="number" name="height" placeholder="height">
-        <input type="number" name="weight" placeholder="weight">
-
-        <input type="submit" value="delete">
-    </form>
-    <br>
-    <form name="update">
-        <input id="target" type="text" name="target" value="5" hidden>
-        <input class="username" name="username" value="" hidden>
-        <input type="date" name="date" value="">
-        <input type="number" name="height" placeholder="height">
-        <input type="number" name="weight" placeholder="weight">
-
-        <input type="submit" value="update">
-    </form>
-    <br>
-    <div id="table" class="table">
+    <h2>Body scale</h2>
+    <div style="width:100%; display: flex; justify-content: center; align-items: center;">
+        <div id="linechart_material" style="width: 900px; height: 500px; margin: 0px auto;"></div>
     </div>
+
+    <br>
+
+    <div class="accordion" id="accordionExample" style="width: 80%; margin: 0 auto;">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    To add some records...
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <!------------ CREATE FORM ------------>
+                    <form name="create">
+                        <input id="target" type="text" name="target" value="5" hidden>
+                        <input class="username" name="username" value="" hidden>
+                        <input type="datetime-local" id="datepicker_c" name="datetime-local">
+                        <input class="date" type="text" name="date&time" value="" hidden>
+                        <input type="number" name="height" value="" placeholder="height(cm)" required step="0.01">
+                        <input type="number" name="weight" value="" placeholder="weight(kg)" required step="0.01">
+
+                        <input type="submit" class="btn btn-info" value="create">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    To see your records for all time...
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <!------------ READ FORM ------------>
+                    <form id="toRead" name="read">
+                        <input id="target" type="text" name="target" value="5" hidden>
+                        <input class="username" name="username" value="" hidden>
+                        <input type="datetime-local" id="datepicker_r" name="datetime-local"hidden>
+                        <input class="date" type="text" name="date" value="" hidden>
+
+                        <input id="toRead" class="btn btn-info" type="submit" value="read">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Show the records, you can delete or modify...
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <div id="table" class="table">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!------------ DELETE FORM ------------>
+    <form id="toDelete" name="delete" hidden>
+        <input id="target" type="text" name="target" value="5" hidden>
+        <input type="text" name="method" value="DELETE" hidden>
+        <input id="deleteRow" name="deleteRow" type="number" value="">
+
+        <input id="submitDel" type="submit" value="delete">
+    </form>
+    <br>
+    <!-- ---------- UPDATE FORM ---------- -->
+    <form id="toUpdate" name="update" hidden>
+        <input type="text" name="target" value="5" hidden>
+        <input id="username" class="username" name="username" value="" hidden>
+        <input id="date" class="datetime-local" type="text" name="date&time" value="" hidden>
+        <input type="text" name="method" value="UPDATE" hidden>
+        <input id="updateRow" type="number" name="updateRow" placeholder="updateRow">
+        <input id="height" type="number" name="height" value="" placeholder="height(cm)" required step="0.01">
+        <input id="weight" type="number" name="weight" value="" placeholder="weight(kg)" required step="0.01">
+
+        <input id="submitUp" type="submit" value="update">
+    </form>
+    <br>
+
 
     <script src="js/body_scale.js" type="text/javascript"></script>
 </body>
