--- a/buying.html
+++ b/buying.html
@@ -31,7 +31,7 @@
     <!--google chart-->
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-    <title>Sports record</title>
+    <title>buying</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
@@ -68,10 +68,7 @@
 
 <body>
     <br>
-    <h2>Sports record</h2>
-    <div style="width:100%; display: flex; justify-content: center; align-items: center;">
-        <div id="piechart" style="width: 900px; height: 500px; margin: 0px auto;"></div>
-    </div>
+    <h2>buying</h2>
     
     <br>
 
@@ -80,7 +77,7 @@
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                     aria-expanded="true" aria-controls="collapseOne">
-                    To add some records...
+                    To add something to buy...
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -88,22 +85,13 @@
                 <div class="accordion-body">
                     <!------------ CREATE FORM ------------>
                     <form name="create">
-                        <input id="target" type="text" name="target" value="4" hidden>
+                        <input id="target" type="text" name="target" value="3" hidden>
                         <input class="username" name="username" value="" hidden>
-                        <input type="datetime-local" id="datepicker_c" name="datetime-local">
-                        <input class="date" type="text" name="date&time" value="" hidden>
-                        <select name="items">
-                            <option disabled selected>Sports</option>
-                            <option>Jogging</option>
-                            <option>Swimming</option>
-                            <option>Fitness</option>
-                            <option>Ball games</option>
-                            <option>Yoga</option>
-                            <option>Others...</option>
-                        </select>
-                        <input type="number" name="howlong" value="" placeholder="howlong(hours)" required step="0.01">
-                        <input type="number" name="consume_cal" value="" placeholder="consume_cal" required step="0.01">
-                        
+                        <input type="datetime-local" id="datepicker_c" name="datetime-local" required>
+                        <input type="text" class="date" name="date&time" hidden>
+                        <input type="text" name="to_buy" value="" placeholder="to_buy" required>
+                        <input type="number" name="price" value="" placeholder="price" required>
+
                         <input type="submit" class="btn btn-info" value="create">
                     </form>
                 </div>
@@ -113,7 +101,7 @@
             <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    To see your records, daily or all time...
+                    To see your purchasing list, daily or all time...
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -121,10 +109,10 @@
                 <div class="accordion-body">
                     <!------------ READ FORM ------------>
                     <form id="toRead" name="read">
-                        <input id="target" type="text" name="target" value="4" hidden>
+                        <input id="target" type="text" name="target" value="3" hidden>
                         <input class="username" name="username" value="" hidden>
                         <input type="datetime-local" id="datepicker_r" name="datetime-local">
-                        <input class="date" type="text" name="date" value="" hidden>
+                        <input type="text" class="date" name="date&time" hidden>
 
                         <h4><span class="badge badge-secondary">At the top, please input the date you want. Or directly
                             read for all records.</span></h4>
@@ -152,7 +140,7 @@
 
     <!------------ DELETE FORM ------------>
     <form id="toDelete" name="delete" hidden>
-        <input id="target" type="text" name="target" value="4" hidden>
+        <input id="target" type="text" name="target" value="3" hidden>
         <input type="text" name="method" value="DELETE" hidden>
         <input id="deleteRow" name="deleteRow" type="number" value="">
 
@@ -161,21 +149,18 @@
     <br>
     <!-- ---------- UPDATE FORM ---------- -->
     <form id="toUpdate" name="update" hidden>
-        <input type="text" name="target" value="4" hidden>
+        <input type="text" name="target" value="1" hidden>
         <input id="username" class="username" name="username" value="" hidden>
         <input id="date" class="datetime-local" type="text" name="date&time" value="" hidden>
         <input type="text" name="method" value="UPDATE" hidden>
         <input id="updateRow" type="number" name="updateRow" placeholder="updateRow">
-        <input id="items" type="text" name="items" value="" placeholder="items">
-        <input id="howlong" type="number" name="howlong" value="" placeholder="howlong(hours)">
-        <input id="consume_cal" type="number" name="consume_cal" value="" placeholder="consume_cal">
+        <input id="to_buy" type="text" name="to_buy" value="" placeholder="to_buy">
+        <input id="price" type="number" name="price" value="" placeholder="price">
 
         <input id="submitUp" type="submit" value="update">
     </form>
     <br>
-
-
-    <script src="js/sports_record.js" type="text/javascript"></script>
+    <script src="js/buying.js" type="text/javascript"></script>
 </body>
 
 </html>
