--- a/diet_record.html
+++ b/diet_record.html
@@ -93,12 +93,12 @@
                         <input type="datetime-local" id="datepicker_c" name="datetime-local" required>
                         <input type="text" class="date" name="date&time" hidden>
                         <input type="text" name="food_name" value="" placeholder="food name" required>
-                        <input type="number" name="cal" value="" placeholder="cal" required step="0.01">
-                        <input type="number" name="protein" value="" placeholder="protein" required step="0.01">
-                        <input type="number" name="fat" value="" placeholder="fat" step="0.01">
-                        <input type="number" name="carbohydrate" value="" placeholder="carbohydrate" required step="0.01">
-                        <input type="number" name="sugar" value="" placeholder="sugar" required step="0.01">
-                        <input type="number" name="nacl" value="" placeholder="nacl" required step="0.01">
+                        <input type="number" name="cal" value="" placeholder="cal(g)" required step="0.01">
+                        <input type="number" name="protein" value="" placeholder="protein(g)" required step="0.01">
+                        <input type="number" name="fat" value="" placeholder="fat(g)" step="0.01">
+                        <input type="number" name="carbohydrate" value="" placeholder="carbohydrate(g)" required step="0.01">
+                        <input type="number" name="sugar" value="" placeholder="sugar(g)" required step="0.01">
+                        <input type="number" name="nacl" value="" placeholder="nacl(g)" required step="0.01">
 
                         <input type="submit" class="btn btn-info" value="create">
                     </form>
@@ -163,18 +163,16 @@
         <input type="text" name="method" value="UPDATE" hidden>
         <input id="updateRow" type="number" name="updateRow" placeholder="updateRow">
         <input id="foodname" type="text" name="food_name" value="" placeholder="food name">
-        <input id="cal" type="number" name="cal" value="" placeholder="cal">
-        <input id="protein" type="number" name="protein" value="" placeholder="protein">
-        <input id="fat" type="number" name="fat" value="" placeholder="fat">
-        <input id="carbohydrate" type="number" name="carbohydrate" value="" placeholder="carbohydrate">
-        <input id="sugar" type="number" name="sugar" value="" placeholder="sugar">
-        <input id="nacl" type="number" name="nacl" value="" placeholder="nacl">
+        <input id="cal" type="number" name="cal" value="" placeholder="cal(g)">
+        <input id="protein" type="number" name="protein" value="" placeholder="protein(g)">
+        <input id="fat" type="number" name="fat" value="" placeholder="fat(g)">
+        <input id="carbohydrate" type="number" name="carbohydrate" value="" placeholder="carbohydrate(g)">
+        <input id="sugar" type="number" name="sugar" value="" placeholder="sugar(g)">
+        <input id="nacl" type="number" name="nacl" value="" placeholder="nacl(g)">
 
         <input id="submitUp" type="submit" value="update">
     </form>
     <br>
-
-
     <script src="js/diet_record.js" type="text/javascript"></script>
 </body>
 
