--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/carousel/">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+        </script>
     <title>login</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
@@ -71,11 +80,14 @@
     <br>
     <br>
     <div class="container">
-        <h3 class="head_text">Sign UP / Log In System</h1>
+        <span class="badge bg-dark">
+            <h3 class="head_text">No food, no life.</h1>
+        </span>
     </div>
+    <br>
     <div class="container" id="login">
         <div class="block">
-            <div class="noWrap">
+            <div class="noWrap" style='width: 90%'>
                 <form name="read" class="login_block">
                     <input id="target" type="text" name="target" value="0" hidden>
                     <div class="header">
@@ -84,14 +96,12 @@
                     <div class="username">
                         <h3>Username</h3>
                         <input id="readName" type="text" name="username" placeholder="username">
-                        <h4>should be within 7 - 20 English characters </h4>
                     </div>
                     <div class="password">
                         <h3>Password</h3>
                         <input id="readName2" type="text" name="password" placeholder="password">
-                        <h4>should be within 8 - 21 English characters </h4>
                     </div>
-                    <div class="button">
+                    <div class="button" style='align-items: center;'>
                         <a onclick="toggle()">Sign up?</a>
                         <input type="submit" value="confirm">
                     </div>
@@ -101,7 +111,7 @@
     </div>
     <div class="container" id="signup">
         <div class="block">
-            <div class="noWrap">
+            <div class="noWrap" style='width: 90%'>
                 <form name="create" class="login_block">
                     <input id="target" type="text" name="target" value="0" hidden>
                     <div class="header">
@@ -110,14 +120,12 @@
                     <div class="username">
                         <h3>Username</h3>
                         <input id="createName" type="text" name="username" placeholder="username">
-                        <h4>should be within 7 - 20 English characters </h4>
                     </div>
                     <div class="password">
                         <h3>Password</h3>
                         <input id="createName2" type="text" name="password" placeholder="password">
-                        <h4>should be within 8 - 21 English characters </h4>
                     </div>
-                    <div class="button">
+                    <div class="button" style='align-items: center;'>
                         <a onclick="toggle()">Log in!</a>
                         <input type="submit" value="confirm">
                     </div>
@@ -125,10 +133,10 @@
             </div>
         </div>
     </div>
-    
+
     <br>
     <div id="table" class="table"></div>
-    
+
     <script src="js/login.js" type="text/javascript"></script>
 </body>
 
