--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
                             <select class="form-select" aria-label="Default select example" onchange="javascript:location.href=this.value;">
                                 <option value="">Quick search for features.</option>
                                 <option value="diet_record.html">Diet record</option>
-                                <option value="sport_record.html">Sports record</option>
+                                <option value="sports_record.html">Sports record</option>
                                 <option value="body_scale.html">Body scale</option>
                                 <option value="food_planning.html">Food planning</option>
                                 <option value="buying.html">Buying</option>
