--- a/food_planning.html
+++ b/food_planning.html
@@ -168,7 +168,7 @@
         <input id="submitUp" type="submit" value="update">
     </form>
     <br>
-    <script src="js/food_planing.js" type="text/javascript"></script>
+    <script src="js/food_planning.js" type="text/javascript"></script>
 </body>
 
 </html>
