--- a/body_scale.html
+++ b/body_scale.html
@@ -69,8 +69,10 @@
 <body>
     <br>
     <h2>Body scale</h2>
-    <div style="width:100%; display: flex; justify-content: center; align-items: center;">
-        <div id="linechart_material" style="width: 900px; height: 500px; margin: 0px auto;"></div>
+    <div style="width:70%; margin: 0px auto;">
+        <div id="linechart_material_1" style="width: 100%; height: 500px; margin: 0px auto;"></div>
+        <div id="linechart_material_2" style="width: 100%; height: 500px; margin: 0px auto;"></div>
+        <div id="linechart_material_3" style="width: 100%; height: 500px; margin: 0px auto;"></div>
     </div>
 
     <br>
