--- a/main.html
+++ b/main.html
@@ -41,6 +41,14 @@
             }
         }
 
+        @media (max-width: 768px) {
+            a img {
+                position: relative;
+                width: 33%;
+                height: auto;
+            }
+        }
+
         iframe {
             width: 100%;
             height: 100%;
@@ -281,7 +289,7 @@
             <a href="https://www.facebook.com/groups/bodybuilding.tw" target="_blank" class="fa fa-facebook"></a>
             <a href="mailto: 00757039@email.ntou.edu.tw" target="_blank" class="fa fa-envelope"></a>
             <a href="https://www.instagram.com/explore/tags/fit/" target="_blank" class="fa fa-instagram"></a>
-            <a href="網站說明.pptx" download="網站說明.pptx">網站說明</a>
+            
             <p class="float-end"><a href="#">Back to top</a></p>
             <!-- <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
         </footer>
